--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,51 @@
+<!doctype html>
+	<html>
+
+	<head>
+		
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    
+     <title> Vanessa Guzman Portfolio </title>
+
+	</head>
+
+	<body>
+	
+		<nav>
+			<div class="a">
+			<ul> <!--unordered list-->
+				<li> <a href="#"> About Me </a>
+				</li> <!--list-->
+				<li> <a href="#"> Portfolio </a>
+				</li>
+			</ul>
+			</div>	
+		</nav>
+	
+
+
+	<div class="b">	
+	<h2> Vanessa Guzman </h2>
+	</div>
+
+
+	<div class="photo">
+	<img src="vanessaphoto.jpg" width="238" height="251" >
+    </div>
+
+
+	<h3>
+		Product Management Professional
+	</h3>
+
+	<hr>
+	<p>
+		Dedicated, innovative problem solver eager to leverage Product Management education and passion for providing exceptional user experience. Metrics-driven, with proven experience tracking and analyzing data. Solid understanding of Agile and Lean. Talent for quickly learning new information, procedures, and technologies. Proficiency with JIRA, HipChat, HTLM, CSS, Balsamiq, CMS, live streaming and video technologies.
+	</p>
+    <hr>
+
+	<ul>
+		<li> <a href="https://twitter.com/vanguzman"> Twitter </a>
 		</li> <!--list-->
 		<li> <a href="http://www.linkedin.com/in/vanessaguzman"> LinkedIn </a>
 		</li>
